<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PictureManagerDemo</string>
    <string name="action_settings">Settings</string>
    <string name="warming">提示</string>
    <string name="msg_no_sdcard">Sdcard已拔出，请插入Sdcard！</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="exit">退出</string>
    
    <string name="native_image">本地相册</string>
    <string name="operation">操作</string>
    <string name="delete_folder_comfirm">您确定要删除相册吗？</string>
    <string name="delete_image_comfirm">您确定要删除照片吗？</string>
    
    <string name="check_all">全选</string>
    <string name="check_none">全部选</string>
    <string name="delete">删除</string>
    <string name="upload">上传</string>
    <string name="back">返回</string>
    
</resources>