<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <com.example.picturemanagerdemo.widget.TitleBar
        android:id="@+id/tb_title_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />
	<GridView 
	    android:id="@+id/gv_image_list"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_centerInParent="true"
	    android:layout_above="@+id/ll_operation"
	    android:layout_below="@+id/tb_title_bar"
	    android:numColumns="4">
	    
	</GridView>
	<LinearLayout 
	    android:id="@+id/ll_operation"
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:visibility="gone">
	    <Button 
	        android:id="@+id/btn_check_all"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/check_all"/>
	    <Button 
	        android:id="@+id/btn_check_none"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/check_none"/>
	    <Button 
	        android:id="@+id/btn_delete"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/delete"/>
	    <Button 
	        android:id="@+id/btn_upload"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/upload"/>
	</LinearLayout>
</RelativeLayout>