<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray">
    <Button 
        android:id="@+id/btn_title_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:minWidth="50dip"
        android:text="@string/back"/>
    <TextView 
        android:id="@+id/tv_title_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_toLeftOf="@+id/btn_title_right"
        android:layout_toRightOf="@+id/btn_title_left"
        android:gravity="center"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textSize="@dimen/title_text_size"
        android:text="@string/app_name"/>
    <Button 
        android:id="@+id/btn_title_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:minWidth="50dip"
        android:text="@string/exit"/>
</RelativeLayout>